--- a/view/deposit.ui
+++ b/view/deposit.ui
@@ -31,7 +31,7 @@
       <rect>
        <x>360</x>
        <y>10</y>
-       <width>461</width>
+       <width>241</width>
        <height>111</height>
       </rect>
      </property>
@@ -127,6 +127,36 @@ font: 700 15pt &quot;Segoe UI&quot;;</string>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(47, 167, 218);</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>700</x>
+       <y>30</y>
+       <width>121</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(75, 73, 157);
+font: 700 9pt &quot;Segoe UI&quot;;</string>
+     </property>
+     <property name="text">
+      <string>Current balance:</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>820</x>
+       <y>30</y>
+       <width>63</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>$500</string>
      </property>
     </widget>
    </widget>
