--- a/view/history.ui
+++ b/view/history.ui
@@ -48,7 +48,7 @@ font: 700 9pt &quot;Segoe UI&quot;;</string>
       <rect>
        <x>350</x>
        <y>0</y>
-       <width>461</width>
+       <width>301</width>
        <height>111</height>
       </rect>
      </property>
@@ -58,6 +58,23 @@ font: 700 28pt &quot;Segoe UI&quot;;</string>
      </property>
      <property name="text">
       <string>HISTORY</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>710</x>
+       <y>30</y>
+       <width>121</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(75, 73, 157);
+font: 700 9pt &quot;Segoe UI&quot;;</string>
+     </property>
+     <property name="text">
+      <string>Current balance:</string>
      </property>
     </widget>
    </widget>
