--- a/view/register.ui
+++ b/view/register.ui
@@ -19,8 +19,8 @@
   <widget class="QStackedWidget" name="stackedWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
+     <x>20</x>
+     <y>20</y>
      <width>941</width>
      <height>491</height>
     </rect>
@@ -76,6 +76,13 @@ font: 700 9pt &quot;Segoe UI&quot;;</string>
       </item>
       <item>
        <widget class="QLineEdit" name="lineEdit_8">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(47, 167, 218);</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEdit">
         <property name="styleSheet">
          <string notr="true">background-color: rgb(47, 167, 218);</string>
         </property>
