--- a/view/deposit.ui
+++ b/view/deposit.ui
@@ -146,17 +146,14 @@ font: 700 9pt &quot;Segoe UI&quot;;</string>
       <string>Current balance:</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_4">
+    <widget class="QLCDNumber" name="balance">
      <property name="geometry">
       <rect>
-       <x>820</x>
-       <y>30</y>
-       <width>63</width>
-       <height>20</height>
+       <x>800</x>
+       <y>12</y>
+       <width>71</width>
+       <height>31</height>
       </rect>
-     </property>
-     <property name="text">
-      <string>$500</string>
      </property>
     </widget>
    </widget>
