--- a/view/menu.ui
+++ b/view/menu.ui
@@ -130,6 +130,16 @@ font: 700 9pt &quot;Segoe UI&quot;;</string>
       <string>Current balance:</string>
      </property>
     </widget>
+    <widget class="QLCDNumber" name="balance">
+     <property name="geometry">
+      <rect>
+       <x>800</x>
+       <y>20</y>
+       <width>71</width>
+       <height>31</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
   </widget>
  </widget>
