updated display of current balance for ui

--- a/view/withdraw.ui
+++ b/view/withdraw.ui
@@ -149,6 +149,16 @@ font: 700 9pt &quot;Segoe UI&quot;;</string>
       <string>Current balance:</string>
      </property>
     </widget>
+    <widget class="QLCDNumber" name="balance">
+     <property name="geometry">
+      <rect>
+       <x>810</x>
+       <y>40</y>
+       <width>64</width>
+       <height>31</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
   </widget>
  </widget>
