--- a/view/history.ui
+++ b/view/history.ui
@@ -140,6 +140,16 @@ font: 700 9pt &quot;Segoe UI&quot;;</string>
       </property>
      </column>
     </widget>
+    <widget class="QLCDNumber" name="balance">
+     <property name="geometry">
+      <rect>
+       <x>810</x>
+       <y>20</y>
+       <width>64</width>
+       <height>31</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
   </widget>
  </widget>
