--- a/view/leaderboard.ui
+++ b/view/leaderboard.ui
@@ -127,6 +127,16 @@ font: 700 9pt &quot;Segoe UI&quot;;</string>
        </property>
       </column>
      </widget>
+     <widget class="QLCDNumber" name="balance">
+      <property name="geometry">
+       <rect>
+        <x>820</x>
+        <y>20</y>
+        <width>64</width>
+        <height>31</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
