--- a/view/transfer.ui
+++ b/view/transfer.ui
@@ -26,28 +26,6 @@
     </rect>
    </property>
    <widget class="QWidget" name="page">
-    <widget class="QWidget" name="verticalLayoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>360</y>
-       <width>207</width>
-       <height>80</height>
-      </rect>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout_4"/>
-    </widget>
-    <widget class="QWidget" name="verticalLayoutWidget_2">
-     <property name="geometry">
-      <rect>
-       <x>250</x>
-       <y>400</y>
-       <width>91</width>
-       <height>71</height>
-      </rect>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout_5"/>
-    </widget>
     <widget class="QPushButton" name="back">
      <property name="geometry">
       <rect>
@@ -64,17 +42,6 @@ font: 700 9pt &quot;Segoe UI&quot;;</string>
      <property name="text">
       <string>back</string>
      </property>
-    </widget>
-    <widget class="QWidget" name="verticalLayoutWidget_3">
-     <property name="geometry">
-      <rect>
-       <x>660</x>
-       <y>360</y>
-       <width>160</width>
-       <height>80</height>
-      </rect>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout_6"/>
     </widget>
     <widget class="QLabel" name="label">
      <property name="geometry">
@@ -173,9 +140,9 @@ font: 700 15pt &quot;Segoe UI&quot;;</string>
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>750</x>
-       <y>40</y>
-       <width>121</width>
+       <x>700</x>
+       <y>50</y>
+       <width>91</width>
        <height>20</height>
       </rect>
      </property>
@@ -185,6 +152,16 @@ font: 700 9pt &quot;Segoe UI&quot;;</string>
      </property>
      <property name="text">
       <string>Current balance:</string>
+     </property>
+    </widget>
+    <widget class="QLCDNumber" name="balance">
+     <property name="geometry">
+      <rect>
+       <x>810</x>
+       <y>40</y>
+       <width>64</width>
+       <height>31</height>
+      </rect>
      </property>
     </widget>
    </widget>
