--- a/view/deposit.ui
+++ b/view/deposit.ui
@@ -26,116 +26,134 @@
     </rect>
    </property>
    <widget class="QWidget" name="page">
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>360</x>
-       <y>10</y>
-       <width>241</width>
-       <height>111</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(75, 73, 157);
-font: 700 28pt &quot;Segoe UI&quot;;</string>
-     </property>
-     <property name="text">
-      <string>DEPOSIT</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="back">
+    <widget class="QFrame" name="frame">
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>40</y>
-       <width>71</width>
-       <height>24</height>
+       <y>0</y>
+       <width>931</width>
+       <height>481</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(168, 212, 241);
+      <string notr="true">background-color: rgb(168, 212, 241);</string>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <widget class="QPushButton" name="back">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>71</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(221, 233, 241);
 font: 700 9pt &quot;Segoe UI&quot;;</string>
-     </property>
-     <property name="text">
-      <string>back</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="confirmDeposit">
-     <property name="geometry">
-      <rect>
-       <x>380</x>
-       <y>390</y>
-       <width>141</width>
-       <height>50</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(168, 212, 241);
-font: 700 9pt &quot;Segoe UI&quot;;</string>
-     </property>
-     <property name="text">
-      <string>Confirm</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_3">
-     <property name="geometry">
-      <rect>
-       <x>250</x>
-       <y>230</y>
-       <width>167</width>
-       <height>59</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(75, 73, 157);
+      </property>
+      <property name="text">
+       <string>back</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>330</x>
+        <y>10</y>
+        <width>241</width>
+        <height>111</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(75, 73, 157);
+font: 700 28pt &quot;Segoe UI&quot;;</string>
+      </property>
+      <property name="text">
+       <string>DEPOSIT</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>260</x>
+        <y>220</y>
+        <width>167</width>
+        <height>59</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(75, 73, 157);
 font: 700 15pt &quot;Segoe UI&quot;;</string>
-     </property>
-     <property name="text">
-      <string>Enter amount:</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="depositAmnt">
-     <property name="geometry">
-      <rect>
-       <x>400</x>
-       <y>239</y>
-       <width>171</width>
-       <height>51</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QLineEdit{
-	background-color: rgb(47, 167, 218);
-	border-radius: 20px;
+      </property>
+      <property name="text">
+       <string>Enter amount:</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="depositAmnt">
+      <property name="geometry">
+       <rect>
+        <x>440</x>
+        <y>230</y>
+        <width>171</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit{
+	background-color: rgb(255, 255, 255);
 }</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>700</x>
-       <y>30</y>
-       <width>121</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(75, 73, 157);
+      </property>
+     </widget>
+     <widget class="QPushButton" name="confirmDeposit">
+      <property name="geometry">
+       <rect>
+        <x>380</x>
+        <y>380</y>
+        <width>141</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(221, 233, 241);
 font: 700 9pt &quot;Segoe UI&quot;;</string>
-     </property>
-     <property name="text">
-      <string>Current balance:</string>
-     </property>
-    </widget>
-    <widget class="QLCDNumber" name="balance">
-     <property name="geometry">
-      <rect>
-       <x>800</x>
-       <y>12</y>
-       <width>71</width>
-       <height>31</height>
-      </rect>
-     </property>
+      </property>
+      <property name="text">
+       <string>Confirm</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>670</x>
+        <y>40</y>
+        <width>121</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(75, 73, 157);
+font: 700 9pt &quot;Segoe UI&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Current balance:</string>
+      </property>
+     </widget>
+     <widget class="QLCDNumber" name="balance">
+      <property name="geometry">
+       <rect>
+        <x>800</x>
+        <y>30</y>
+        <width>71</width>
+        <height>31</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
