--- a/view/history.ui
+++ b/view/history.ui
@@ -26,79 +26,98 @@
     </rect>
    </property>
    <widget class="QWidget" name="page">
-    <widget class="QPushButton" name="back">
+    <widget class="QFrame" name="frame">
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>20</y>
-       <width>71</width>
-       <height>24</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(168, 212, 241);
-font: 700 9pt &quot;Segoe UI&quot;;</string>
-     </property>
-     <property name="text">
-      <string>back</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>350</x>
        <y>0</y>
-       <width>301</width>
-       <height>111</height>
+       <width>941</width>
+       <height>481</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(75, 73, 157);
-font: 700 28pt &quot;Segoe UI&quot;;</string>
+      <string notr="true">background-color: rgb(168, 212, 241);</string>
      </property>
-     <property name="text">
-      <string>HISTORY</string>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
      </property>
-    </widget>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>710</x>
-       <y>30</y>
-       <width>121</width>
-       <height>20</height>
-      </rect>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
      </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(75, 73, 157);
+     <widget class="QPushButton" name="back">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>71</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(221, 233, 241);
 font: 700 9pt &quot;Segoe UI&quot;;</string>
-     </property>
-     <property name="text">
-      <string>Current balance:</string>
-     </property>
-    </widget>
-    <widget class="QTableWidget" name="tableWidget">
-     <property name="geometry">
-      <rect>
-       <x>70</x>
-       <y>130</y>
-       <width>781</width>
-       <height>301</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">font: 700 9pt &quot;Segoe UI&quot;;</string>
-     </property>
-    </widget>
-    <widget class="QLCDNumber" name="balance">
-     <property name="geometry">
-      <rect>
-       <x>810</x>
-       <y>20</y>
-       <width>64</width>
-       <height>31</height>
-      </rect>
-     </property>
+      </property>
+      <property name="text">
+       <string>back</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>350</x>
+        <y>10</y>
+        <width>301</width>
+        <height>111</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(75, 73, 157);
+font: 700 28pt &quot;Segoe UI&quot;;</string>
+      </property>
+      <property name="text">
+       <string>HISTORY</string>
+      </property>
+     </widget>
+     <widget class="QTableWidget" name="tableWidget">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>130</y>
+        <width>781</width>
+        <height>301</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 700 9pt &quot;Segoe UI&quot;;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>700</x>
+        <y>30</y>
+        <width>121</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(75, 73, 157);
+font: 700 9pt &quot;Segoe UI&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Current balance:</string>
+      </property>
+     </widget>
+     <widget class="QLCDNumber" name="balance">
+      <property name="geometry">
+       <rect>
+        <x>820</x>
+        <y>20</y>
+        <width>64</width>
+        <height>31</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
