--- a/view/leaderboard.ui
+++ b/view/leaderboard.ui
@@ -32,6 +32,9 @@
        <height>461</height>
       </rect>
      </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(168, 212, 241);</string>
+     </property>
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
@@ -65,7 +68,7 @@ font: 700 28pt &quot;Segoe UI&quot;;</string>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(168, 212, 241);
+       <string notr="true">background-color: rgb(221, 233, 241);
 font: 700 9pt &quot;Segoe UI&quot;;</string>
       </property>
       <property name="text">
