--- a/view/menu.ui
+++ b/view/menu.ui
@@ -26,119 +26,138 @@
     </rect>
    </property>
    <widget class="QWidget" name="page">
-    <widget class="QLabel" name="label">
+    <widget class="QFrame" name="frame">
      <property name="geometry">
       <rect>
-       <x>210</x>
-       <y>30</y>
-       <width>461</width>
-       <height>111</height>
+       <x>0</x>
+       <y>0</y>
+       <width>931</width>
+       <height>491</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(75, 73, 157);
+      <string notr="true">background-color: rgb(168, 212, 241);</string>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>180</x>
+        <y>10</y>
+        <width>461</width>
+        <height>111</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(75, 73, 157);
 font: 700 28pt &quot;Segoe UI&quot;;</string>
-     </property>
-     <property name="text">
-      <string>MAIN MENU</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
-    <widget class="QWidget" name="verticalLayoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>340</x>
-       <y>170</y>
-       <width>211</width>
-       <height>271</height>
-      </rect>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
-      <item>
-       <widget class="QPushButton" name="withdraw">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(168, 212, 241);
+      </property>
+      <property name="text">
+       <string>MAIN MENU</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QWidget" name="verticalLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>320</x>
+        <y>170</y>
+        <width>211</width>
+        <height>271</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QPushButton" name="withdraw">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(221, 223, 241);
 font: 700 9pt &quot;Segoe UI&quot;;</string>
-        </property>
-        <property name="text">
-         <string>Withdraw</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="deposit">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(168, 212, 241);
+         </property>
+         <property name="text">
+          <string>Withdraw</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="deposit">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(221, 223, 241);
 font: 700 9pt &quot;Segoe UI&quot;;</string>
-        </property>
-        <property name="text">
-         <string>Deposit</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="transfer">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(168, 212, 241);
+         </property>
+         <property name="text">
+          <string>Deposit</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="transfer">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(221, 223, 241);
 font: 700 9pt &quot;Segoe UI&quot;;</string>
-        </property>
-        <property name="text">
-         <string>Transfer Money</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="transactions">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(168, 212, 241);
+         </property>
+         <property name="text">
+          <string>Transfer Money</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="transactions">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(221, 223, 241);
 font: 700 9pt &quot;Segoe UI&quot;;</string>
-        </property>
-        <property name="text">
-         <string>Transaction History</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="leaderboard">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(168, 212, 241);
+         </property>
+         <property name="text">
+          <string>Transaction History</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="leaderboard">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(221, 223, 241);
 font: 700 9pt &quot;Segoe UI&quot;;</string>
-        </property>
-        <property name="text">
-         <string>Leaderboard</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>700</x>
-       <y>30</y>
-       <width>121</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(75, 73, 157);
+         </property>
+         <property name="text">
+          <string>Leaderboard</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>640</x>
+        <y>40</y>
+        <width>121</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(75, 73, 157);
 font: 700 9pt &quot;Segoe UI&quot;;</string>
-     </property>
-     <property name="text">
-      <string>Current balance:</string>
-     </property>
-    </widget>
-    <widget class="QLCDNumber" name="balance">
-     <property name="geometry">
-      <rect>
-       <x>800</x>
-       <y>20</y>
-       <width>71</width>
-       <height>31</height>
-      </rect>
-     </property>
+      </property>
+      <property name="text">
+       <string>Current balance:</string>
+      </property>
+     </widget>
+     <widget class="QLCDNumber" name="balance">
+      <property name="geometry">
+       <rect>
+        <x>760</x>
+        <y>30</y>
+        <width>71</width>
+        <height>31</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
