--- a/view/title.ui
+++ b/view/title.ui
@@ -23,56 +23,75 @@
     </rect>
    </property>
    <widget class="QWidget" name="page">
-    <widget class="QPushButton" name="login">
+    <widget class="QFrame" name="frame">
      <property name="geometry">
       <rect>
-       <x>370</x>
-       <y>310</y>
-       <width>141</width>
-       <height>50</height>
+       <x>-1</x>
+       <y>-1</y>
+       <width>931</width>
+       <height>481</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(168, 212, 241);
+      <string notr="true">background-color: rgb(168, 212, 241);</string>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>290</x>
+        <y>110</y>
+        <width>421</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(75, 73, 157);
+font: 700 35pt &quot;Segoe UI&quot;;</string>
+      </property>
+      <property name="text">
+       <string>SIT ICT BANK</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="createAcc">
+      <property name="geometry">
+       <rect>
+        <x>390</x>
+        <y>260</y>
+        <width>141</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(221, 233, 241);
 font: 700 9pt &quot;Segoe UI&quot;;</string>
-     </property>
-     <property name="text">
-      <string>Login</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>320</x>
-       <y>30</y>
-       <width>321</width>
-       <height>71</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(75, 73, 157);
-font: 700 28pt &quot;Segoe UI&quot;;</string>
-     </property>
-     <property name="text">
-      <string>SIT ICT BANK</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="createAcc">
-     <property name="geometry">
-      <rect>
-       <x>370</x>
-       <y>240</y>
-       <width>141</width>
-       <height>50</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(168, 212, 241);
+      </property>
+      <property name="text">
+       <string>Create Account</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="login">
+      <property name="geometry">
+       <rect>
+        <x>390</x>
+        <y>320</y>
+        <width>141</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(221, 233, 241);
 font: 700 9pt &quot;Segoe UI&quot;;</string>
-     </property>
-     <property name="text">
-      <string>Create Account</string>
-     </property>
+      </property>
+      <property name="text">
+       <string>Login</string>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
